--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,30 @@
+body {
+  font: 20px Arial, sans-serif;
+}
+
 .navbar {
   background-color: green;
 }
 
 .quem-somos {
   background-color: blue;
+  color: aliceblue;
 }
 
 .margin {
-  padding-top: 50px;
+  padding-top: 10px;
+  padding-bottom: 50px;
+}
+
+.parceiros {
+  background-color: darkseagreen;
+}
+
+.servicos {
+  background-color: wheat;
+}
+
+.bg-footer {
+  background-color: black;
+  color: white;
 }
